--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -6,10 +6,49 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+    <h1>Our Menu</h1>
 
+    <div class="row">
+        <div class="col-lg-4 col-md-6">
+            <section id="one">
+                <section class="title">Chicken</section>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas mollitia modi soluta a corporis eum
+                    quis,
+                    deserunt saepe consectetur asperiores tempore necessitatibus dolore ea, esse reprehenderit, atque
+                    dolorum totam deleniti.
+                </p>
+            </section>
+        </div>
+
+        <div class="col-lg-4 col-md-6">
+            <section id="two">
+                <section class="title">Beef</section>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas mollitia modi soluta a corporis eum
+                    quis,
+                    deserunt saepe consectetur asperiores tempore necessitatibus dolore ea, esse reprehenderit, atque
+                    dolorum totam deleniti.
+                </p>
+            </section>
+        </div>
+
+        <div class="col-lg-4 col-md-12">
+            <section id="three">
+                <section class="title">Sushi</section>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas mollitia modi soluta a corporis eum
+                    quis,
+                    deserunt saepe consectetur asperiores tempore necessitatibus dolore ea, esse reprehenderit, atque
+                    dolorum totam deleniti.
+                </p>
+            </section>
+        </div>
+    </div>
 </body>
 
 </html>
